EKB-0017 add tracing